public enum ExerciseDifficulty {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED,
    PROFESSIONAL
}
